--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -90,12 +90,12 @@ button {
     background-color: #f8d7da;
 }
 
-table#employee_list th {
+table#salary_list th {
     width: 30%;
     padding: 10px 2%;
 }
 
-table#employee_list td {
+table#salary_list td {
     width: 29%;
     padding: 10px 2%;
 }
@@ -134,25 +134,25 @@ h1 a {
     color: #eeeeee;
 }
 
-table#report_list th {
+table#salary_list th {
     font-weight: bold;
     padding: 10px 2%;
 }
 
-table#report_list .report_name {
-    width: 20%;
+table#salary_list .salary_date {
+    width: 25%;
     padding: 10px 2%;
 }
-table#report_list .report_date {
+table#salary_list .shop_name {
+    width: 35%;
+}
+
+table#salary_list .salary_hour {
     width: 20%;
 }
 
-table#report_list .report_title {
-    width: 37%;
-}
-
-table#report_list .report_action {
-    width: 13%;
+table#salary_list .salary_wage {
+    width: 20%;
 }
 
 pre {
